k8s/DaemonSet.yml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: food-app
  namespace: food-app
  labels:
    k8s-app: food-app
spec:
  selector:
    matchLabels:
      name: food-app
  template:
    metadata:
      labels:
        name: food-app
    spec:
      tolerations:
      - key: node-role.kubernetes.io/master
        operator: Exists
        effect: NoSchedule
      containers:
      - name: food-app
        image: nginx
