k8s/Deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
    labels:
        name: food-app
spec:
   replicas: 3
   selector:
      matchLabels:
          app: food-app
   template: 
     metadata:
       labels:
         app: foof-app
     spec:
      containers:
       - name: food-app
         image: nginx
         ports:
          - containerPort: 80
