k8s/Service.yml
apiVersion: v1
kind: Service
metadata:
  name: my-cluster
spec:
  selector:
   app.kubernetes.io/name: food-app
  ports:
   - port: 80
     targetPort: 8000
